remove-server-header/http-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/nativeSidecar: 'true'
      creationTimestamp: null
      labels:
        app: http
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          imagePullPolicy: Always
          name: container
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/httpd/tls/localhost.crt
              subPath: localhost.crt
              name: servercert
            - mountPath: /etc/httpd/tls/localhost.key
              subPath: localhost.key
              name: serverkey
            - mountPath: /var/www/html/index.html
              subPath: index.html
              name: httpcontent
      volumes:
        - name: httpcontent
          configMap:
            name: httpcontent
        - name: servercert
          secret:
            secretName: httpcert
            items:
              - key: tls.crt
                path: localhost.crt
        - name: serverkey
          secret:
            secretName: httpcert
            items:
              - key: tls.key
                path: localhost.key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
