remove-server-header/vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http
spec:
  exportTo:
  - '.'
  gateways:
    - gateway-v1
  hosts:
    - http.apps.example.com
  http:
    - route:
        - destination:
            host: http
            port:
              number: 8080
          weight: 100
---
